# adorad

./: .gitignore  CMakeLists.txt  COMPILER.md  CONTRIBUTING.md  Documentation.md  LICENSE  LanguageDesign.md  Makefile  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  st.py  test.c  test.cpp  test.txt  tester.c
.github/: CODEOWNERS  toc.yml.off  welcome.yml.off
.github/workflows/: ci.yml  codeql.yml  macos.yml  sloc.yml  test.yml  ubuntu.yml  windows.yml
CMake/: cmake_macros.h.in
Hajn/compiler/: hazel.c
Hazel/: CMakeLists.txt  Hazel.h  TheJulietteCode.md  hazel.h  main.c  main.cpp
Hazel/Compiler/IO/: File.c  File.cpp  File.h
Hazel/Compiler/Lexer/: Lexer.c  Lexer.cpp  Lexer.h  Lexer_OLD.c  Location.h
Hazel/Compiler/Syntax/: Syntax.toml
Hazel/Compiler/Tokens/: Tokens.c  Tokens.cpp  Tokens.h
Hazel/Compiler/Types/: Types.h
Hazel/Core/: Arrow.h  CMake_Macros.h  CPUs.h  Clock.h  Compilers.h  Debug.h  Exception.h  HCore.h  Headers.h  IO.h  Math.h  Memory.h  Misc.h  OS.h  String.h  Types.h
Hazel/compiler/: hazel.c
Hazel/compiler/le/: Lexer.h
Hazel/compiler/lexer/: Lexer_OLD.c  lexer.h  lexer_OLD.c
Hazel/compiler/syn/: Syntax.toml
Hazel/compiler/tokens/: tok.c  tokens.c  tokens.h
Hazel/compiler/types/: types.h
Hazel/core/: Clock.h  cmake_macros.h  export.h  hcore.h  math.h  memory.h  types.h
Hazel/lexer/: lexer.h  token.h
adorad/: CMakeLists.txt  adorad.h  main.c  maininternaltests.c
adorad/compiler/: ast.c  ast.h  compiler.c  compiler.h  core.c  core.h  error.c  error.h  lexer.c  lexer.h  location.c  location.h  old_parser.c  parser.c  parser.h  tokens.c  tokens.h  types.h
adorad/compiler/parser/: func.c  new_parser.c  parser.c
adorad/compiler/syntax/: syntax.toml
adorad/core/: CMakeLists.txt  README.md  adcore.h  buffer.c  buffer.h  buffview.h  char.c  char.h  clock.c  clock.h  cmake_macros.h  compilers.h  coreten.c  cpu.h  cstl.c  debug.c  debug.h  endian.c  endian.h  export.h  hash.c  hash.h  hcore.h  headers.h  io.c  io.h  math.h  memory.h  misc.h  os.c  os.h  os_defs.h  string.h  types.h  utf8.c  utf8.h  utf8_data.h  utf8_properties.h  utf8_temp.h  utils.h  (+4 more)
adorad/coreten/: CMakeLists.txt  adcore.h  buffer.c  buffer.h  char.c  char.h  clock.c  cmake_macros.h  debug.c  debug.h  endian.c  endian.h  export.h  hash.c  hash.h  headers.h  io.c  io.h  math.h  os.c  os.h  types.h  utf8.c  utf8.h  utils.h  vector.c  vector.h  warnings.h  windows.h
cmake/: cmake_macros.h.in
doc/: docs.md
docs/: COMPILER.md  LanguageDesign.md  docs.md  examples.swift  language-design.md  old_docs.md
hazel/: CMakeLists.txt  hazel.h  main.c  maininternaltests.c
hazel/compiler/: ast.h  hazel.c  lexer.c  lexer.h  parser.h  tokens.c  tokens.h  types.h
hazel/compiler/lexer/: lexer.c  lexer.h  lexer_OLD.c
hazel/compiler/tokens/: tokens.c  tokens.h
hazel/compiler/types/: types.h
hazel/core/: buffer.h  clock.h  cmake_macros.h  compilers.h  debug.h  defines.h  exception.h  hcore.h  hdef.h  headers.h  htype.h  io.h  memory.h  misc.h  os.h  string.h  type.h  types.h  vector.h
hazel/internal/: defines.h
hazel/lexer/: token.h
hazel/runtime/ast/: ast.c  ast.h
hazel/runtime/grammar/: Tokens  Tokens.txt
hazel/runtime/lexer/: lexer.c  lexer.h  tokens.h
hazel/runtime/parser/: parser.c  parser.h  tokens.c  tokens.h
hazel/runtime/tokens/: tokens.c  tokens.h
hazel/runtime/types/: types.h
hazzie/Core/: Compilers.h  OS.h
hfk/: hazel.h
hfk/core/: cpus.h  memory.h  types.h
hss/: main.c
hss/core/: clock.h  cpu.h  exception.h  io.h  misc.h  os.h
old-hazel/: hazel.h  main.c
old-hazel/core/: hdef.h
old-hazel/runtime/ast/: ast.c  ast.h
old-hazel/runtime/compiler/: compiler.c
old-hazel/runtime/lexer/: lexer.c  lexer.h
old-hazel/runtime/parser/: parser.h
old-hazel/runtime/tokens/: __token.h  tokens.c  tokens.h
test/: CMakeLists.txt  LexerDemo.ad  LexerDemo.hzl
test/Compiler/: Lexer.cpp  Lexer_test.c  test_Lexer.c
test/compiler/: test_Lexer.c  test_lexer.c
tools/scripts/: generate_tokens.py
tools/tests/: before_tests_ci.py  before_tests_run_ci.py
